# University-Project

./: CMakeLists.txt  College.cpp  College.h  main.cpp
App/Controllers/: AdmissionAndRegistrationD.cpp  AdmissionAndRegistrationD.h  DepartmentEmployee.cpp  DepartmentEmployee.h  EmployeesAffairsD.cpp  EmployeesAffairsD.h  MaintenanceD.cpp  MaintenanceD.h  Major.cpp  Major.h  Person.cpp  Person.h  Student.cpp  Student.h  TeachingStaff.cpp  TeachingStaff.h  University.cpp  University.h
App/Helpres/Enums/: Enum.h
